GNOME Bugzilla – Bug 728252
libextract-mp3.so incorrectly handles id3v24 and id3v23 headers
Last modified: 2015-07-13 19:12:53 UTC
I am using ubuntu 14.04 gnome3.12 from ppa's, tracker hangs at some files if i remove the file from extract path it continue to extarct n index else it is using 100% cpu but not extracting/indexing /usr/lib/tracker/tracker-extract -V Tracker 1.0.0 Tracker-DEBUG: Using /usr/lib/x86_64-linux-gnu/tracker-1.0/extract-modules/libextract-mp3.so...
file failed to attach so, i am adding external link : https://dl.dropboxusercontent.com/u/36610068/Misc%20-%20Track%2003.mp3
Indeed, this file seems to be problematic. I will take a closer look when I can!
given attached file play's perfectly , not only this file some others also same; even some pdfs too. if any error accurs insted of hanging(cpu usage 99-100%) it should skip the file and continue indexing
Created attachment 275357 [details] [review] Apply correct limitations on while() loop for MP3 v2.{3|4} tags So the test file linked to here is an id3 v23 MP3. We're using the id3 v24 parser function for this and it seems we while() forever when parsing the tags. At some point we hit the buffer after tags are defined and continue past the end of that into the raw data. This patch seems to fix the issue. I would like some review first though, since this changes the logic for quite an important area of code.
Comment on attachment 275357 [details] [review] Apply correct limitations on while() loop for MP3 v2.{3|4} tags Will be in the next release.
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report. This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.
Reopening this bug because there have been a few issues since applying it. I've started a new branch to handle this. I am confident the id3v23 issues are resolved, but now need to make sure the id3v24 header parsing works, it's certainly not right as it is now. The new branch is: https://git.gnome.org/browse/tracker/log/?h=mp3-id3v2-fixes
*** Bug 729982 has been marked as a duplicate of this bug. ***
Another file that's mentioned in bug #729982 doesn't extract properly with the original patch I used. For this other MP3 to test with, go to: http://www.mediafire.com/listen/8359zxrq9lf1atu/Trong_Tan_-_04_-_Em_Va_Toi.mp3
Hi Carlos, have we fixed this now? I spent a lot of time testing this and I think I had it working. However, I know you've been patching this area lately too. Thanks,
Yup :). Files in comment #9 and comment #1 are extracted just fine on master.